--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 						<li class="header__menu-item"><a href="#" class="link__menu-item">Для детей</a></li>
 					</ul>
 				</nav>
+				<div class="menu-burger">
+					<button class="menu__burger-item"><img src="img/icon/hamburger-menu.svg" alt="Burger" class="btn-burger"></button>
+				</div>
 				<a href="/"><img src="img/logo.svg" alt="Logo" class="logo"></a>
 				<div class="header__menu-right">
 					<a href="#" class="pay__header">Оплата</a>
@@ -240,8 +243,9 @@
 				</div>
 				<!-- new__model-item -->
 			</div>
-			<a href="#" class="btn btn-arrow btn-new">ВСЕ МОДЕЛИ <img src="img/icon/Arrow.svg" alt="Arrow"
-					class="btn__arrow-img"></a>
+			<div class="btn__new-model">
+				<a href="#" class="btn btn-arrow btn-new">ВСЕ МОДЕЛИ <img src="img/icon/Arrow.svg" alt="Arrow" class="btn__arrow-img"></a>
+			</div>
 		</div>
 	</section>
 	<!-- /.new__models -->
@@ -299,8 +303,9 @@
 				</div>
 				<!-- new__model-item -->
 			</div>
-			<a href="#" class="btn btn-arrow btn-new">ВСЕ МОДЕЛИ <img src="img/icon/Arrow.svg" alt="Arrow"
-					class="btn__arrow-img"></a>
+			<div class="btn__new-model">
+				<a href="#" class="btn btn-arrow btn-new">ВСЕ МОДЕЛИ <img src="img/icon/Arrow.svg" alt="Arrow" class="btn__arrow-img"></a>
+			</div>
 		</div>
 	</section>
 	<!-- /.new__models -->
@@ -309,13 +314,13 @@
 		<div class="container">
 			<div class="footer__link-items">
 				<div class="footer__logo-text">
-					<a href="/"><img src="img/wit logo.svg" alt="Logo" class="logo"></a>
+					<a href="/"><img src="img/witlogo.svg" alt="Logo" class="logo"></a>
 					<p class="footer__text-logo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla faucibus
 						egestas elit, at eleifend elit ornare ut.</p>
 				</div>
 				<nav class="footer-nav">
 					<ul class="footer__menu-items">
-						<p class="footer__menu-top">Основные ссылки</p>
+						<li class="footer__menu-top">Основные ссылки</li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">О компании</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Каталог</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Доставка</a></li>
@@ -325,7 +330,7 @@
 
 				<nav class="footer-nav">
 					<ul class="footer__menu-items">
-						<p class="footer__menu-top">Категории</p>
+						<li class="footer__menu-top">Категории</li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Мужская одежда</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Женская одежда</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Детская одежда</a></li>
@@ -335,7 +340,7 @@
 
 				<nav class="footer-nav">
 					<ul class="footer__menu-items">
-						<p class="footer__menu-top">ПОЛЕЗНЫЕ ССЫЛКИ</p>
+						<li class="footer__menu-top">ПОЛЕЗНЫЕ ССЫЛКИ</li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Таблица размеров</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Блог о моде</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link">Наша миссия</a></li>
@@ -343,7 +348,7 @@
 				</nav>
 				<nav class="footer-nav">
 					<ul class="footer__menu-items">
-						<p class="footer__menu-top">СОЦ СЕТИ</p>
+						<li class="footer__menu-top">СОЦ СЕТИ</li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link"><img src="img/icon/vk.svg" alt="VK"
 									class="link__img-footer"> VK.com</a></li>
 						<li class="footer-menu-item"><a href="#" class="footer__menu-link"><img src="img/icon/facebook.svg"
